Fix bug where the blog post time overlaps the blog post text when no tags and social icons are defined.

--- a/less/main/typography.less
+++ b/less/main/typography.less
@@ -2,7 +2,6 @@
 // Duotone: LESS > Main > Typography
 // ----------------------------------------
 //
-// #Content Widget
 // #General Typography
 // #Bold, Italic, Underlined
 // #Label
@@ -18,12 +17,6 @@
 // #Icons
 //
 // ----------------------------------------
-
-// ------------------------------
-// #Content Widget
-// ------------------------------
-
-.content {}
 
 // ------------------------------
 // #General Typography
