--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -86,6 +86,7 @@
 
 .blogpost__post-footer {
 	position: relative;
+	margin-top: 5em;
 }
 
 // ------------------------------
@@ -94,7 +95,7 @@
 
 .blogpost__post-footer .timestamp {
 	position: absolute;
-	top: -4.5em;
+	top: -4em;
     left: 0;
     right: auto;
 	display: block;
@@ -109,7 +110,7 @@
 
 .blogpost__post-attributes {
 	display: table;
-	margin: 5em 0 2em;
+	margin: 0 0 2em;
 	padding: 1em 0 0;
 	
 	@media @mobile {
