--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -107,7 +107,6 @@
 	
 	@media @tablet-height {
 		font-size: @font__feature-headline--font-size*0.7;
-		font-size: unit(@font__feature-headline--font-size*0.07, vw);
 	}
 	
 	@media @mobile {
@@ -144,7 +143,6 @@
 	
 	@media @tablet-height {
 		font-size: @font__feature-strapline--font-size*0.7;
-		font-size: unit(@font__feature-strapline--font-size*0.07, vw);
 	}
 	
 	@media @mobile {
